--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ header h1{
     color: black;
 }
 
-@media screen and (min-width: 380px){
+@media screen and (max-width: 380px){
     .mybody{
        margin-top: 30% ;
        width: 80%;
